--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
     - name: Configure Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-region: ${{ env AWS_REGION }}
+        aws-region: ${{ env.AWS_REGION }}
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         #role-external-id: ${{ secrets.AWS_ROLE_EXTERNAL_ID }}
@@ -89,7 +89,7 @@ jobs:
     - name: Configure Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-region: ${{ env AWS_REGION }}
+        aws-region: ${{ env.AWS_REGION }}
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
@@ -133,7 +133,7 @@ jobs:
     - name: Configure Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-region: ${{ env AWS_REGION }}
+        aws-region: ${{ env.AWS_REGION }}
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
@@ -177,7 +177,7 @@ jobs:
     - name: Configure Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-region: ${{ env AWS_REGION }}
+        aws-region: ${{ env.AWS_REGION }}
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
@@ -216,7 +216,7 @@ jobs:
     - name: Configure Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-region: ${{ env AWS_REGION }}
+        aws-region: ${{ env.AWS_REGION }}
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
