--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,31 +33,27 @@ jobs:
         node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
 
-    - name: Add build directory
-      run: mkdir -p ${{ env.BUILD_PATH }}
-
     - name: Clone dependencies
       run: |
         set -o pipefail
-        npm ci | tee -a ${{ env.BUILD_PATH }}/integration.log
+        npm ci | tee -a integration.log
       env:
         NODE_ENV: 'development'
 
     - name: Build artifacts
       run: |
         set -o pipefail
-        npm run build --if-present | tee -a ${{ env.BUILD_PATH }}/integration.log
+        npm run build --if-present | tee -a integration.log
 
     - name: Run unit tests
       run: |
         set -o pipefail
-        npm test | tee -a ${{ env.BUILD_PATH }}/integration.log
+        npm test | tee -a integration.log
 
     - name: Create tarball
       run: |
         rm -rf .git .github .gitignore
-        tar -cvf --exclude="${{ github.repository_owner }}/*" \
-        ${{ env.BUILD_PATH }}/${{ env.NODE_VERSION }}.tar .
+        tar -cvf ${{ env.BUILD_PATH }}/${{ env.NODE_VERSION }}.tar .
 
     - name: Configure credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -74,7 +70,7 @@ jobs:
 
     - name: Upload artifacts
       run: |
-        aws s3 cp ${{ env.BUILD_PATH }} s3://${{ env.S3_PATH }} \
+        aws s3 cp . s3://${{ env.S3_PATH }} \
         --recursive --exclude "*" --include "*.log" --include "*.tar"
 
 
