--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
     - name: Create tarball
       run: |
         rm -rf .git .github .gitignore
-        tar -cvf ${{ env.BUILD_PATH }}/${{ env.NODE_VERSION }}.tar .
+        tar -cvf ${{ env.NODE_VERSION }}.tar .
 
     - name: Configure credentials
       uses: aws-actions/configure-aws-credentials@v1
