--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,19 +36,19 @@ jobs:
     - name: Clone dependencies
       run: |
         set -o pipefail
-        npm ci | tee -a integration.log
+        npm ci --verbose | tee -a integration.log 2>&1
       env:
         NODE_ENV: 'development'
 
     - name: Build artifacts
       run: |
         set -o pipefail
-        npm run build --if-present --verbose | tee -a integration.log
+        npm run build --if-present --verbose | tee -a integration.log 2>&1
 
     - name: Run unit tests
       run: |
         set -o pipefail
-        npm test --verbose | tee -a integration.log
+        npm test --verbose | tee -a integration.log 2>&1
 
     - name: Create tarball
       run: |
